# remnashop

./: .env.example  Dockerfile.local  Makefile  README.md  README.ru_RU.md  docker-compose.local.yml  docker-compose.prod.external.yml  docker-compose.prod.internal.yml  docker-entrypoint.sh  pyproject.toml
app/assets/locales/en/: messages.ftl  notifications.ftl
app/assets/locales/ru/: buttons.ftl  messages.ftl  notifications.ftl
app/bot/: conditions.py  states.py
app/bot/middlewares/: error.py  i18n.py  throttling.py  user.py
app/bot/routers/: __init__.py
app/bot/routers/dashboard/: __init__.py  dialog.py  handler.py
app/bot/routers/menu/: dialog.py  handler.py
app/bot/widgets/: __init__.py  audit.py  banner.py  i18n_format.py  ignore_input.py
app/core/: constants.py
assets/translations/ru/: buttons.ftl  messages.ftl  notifications.ftl  utils.ftl
src/: lifespan.py
src/api/: app.py
src/api/endpoints/: __init__.py  payments.py  remnawave.py
src/bot/: keyboards.py  states.py
src/bot/middlewares/: __init__.py  access.py  base.py  channel.py  error.py  garbage.py  rules.py  throttling.py  user.py
src/bot/routers/: __init__.py
src/bot/routers/dashboard/: __init__.py  dialog.py  getters.py
src/bot/routers/dashboard/access/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/broadcast/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/importer/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/promocodes/: dialog.py  getters.py
src/bot/routers/dashboard/remnashop/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/remnashop/gateways/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/remnashop/notifications/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/remnashop/plans/: dialog.py  getters.py  handlers.py
src/bot/routers/dashboard/remnawave/: getters.py  handlers.py
src/bot/routers/dashboard/statistics/: getters.py
src/bot/routers/dashboard/users/: dialog.py  handlers.py
src/bot/routers/dashboard/users/user/: dialog.py  getters.py  handlers.py
src/bot/routers/extra/: __init__.py  error.py  goto.py  member.py  notification.py  payment.py  test.py
src/bot/routers/menu/: dialog.py  getters.py  handlers.py
src/bot/routers/subscription/: dialog.py  getters.py  handlers.py
src/bot/widgets/: banner.py  i18n_format.py
src/core/: constants.py  enums.py  logger.py
src/core/config/: app.py  bot.py  remnawave.py
src/core/security/: crypto.py
src/core/storage/: key_builder.py  keys.py
src/core/utils/: formatters.py  iterables.py  message_payload.py  types.py  validators.py
src/infrastructure/database/: uow.py
src/infrastructure/database/migrations/versions/: 0001_create_enums.py  0002_create_base_tables.py  0003_create_users_and_subscriptions.py  0004_create_plan_durations.py  0005_create_plan_prices.py  0006_create_transactions.py  0007_create_promocode_activations.py  0010_add_channel_id.py  0013_create_referrals.py
src/infrastructure/database/models/dto/: __init__.py  base.py  broadcast.py  payment_gateway.py  promocode.py  settings.py  subscription.py  transaction.py  user.py
src/infrastructure/database/models/sql/: __init__.py  payment_gateway.py  plan.py  promocode.py  settings.py  subscription.py  transaction.py  user.py
src/infrastructure/database/repositories/: broadcast.py  facade.py  payment_gateway.py  settings.py  subscription.py  transaction.py  user.py
src/infrastructure/di/providers/: bot.py  database.py  i18n.py  payment_gateways.py  redis.py  remnawave.py  services.py
src/infrastructure/payment_gateways/: base.py  telegram_stars.py  yookassa.py
src/infrastructure/redis/: cache.py
src/infrastructure/taskiq/: middlewares.py  scheduler.py
src/infrastructure/taskiq/tasks/: __init__.py  broadcast.py  importer.py  notifications.py  payments.py  subscriptions.py  updates.py
src/services/: access.py  base.py  broadcast.py  command.py  importer.py  notification.py  payment_gateway.py  plan.py  pricing.py  promocode.py  remnawave.py  settings.py  subscription.py  transaction.py  user.py  webhook.py
